<resources>
    <string name="app_name">iTranslate</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="loginEmpty">Fill in both fields</string>
    <string name="emailEmpty">Email field is empty</string>
    <string name="emailReset">Password reset email sent</string>
    <string name="retypePassword">Retype Password</string>
    <string name="lastName">Last Name</string>
    <string name="firstName">First Name</string>
    <string name="fillAllFields">Fill in all fields</string>
    <string name="invalidEmail">Email address is incorrect</string>
    <string name="invalidPassword">Password must contain at least 6 characters</string>
    <string name="passwordsDontMatch">Passwords don\'t match</string>
    <string name="registerFailed">Registration failed</string>
    <string name="registerSuccess">Registration was successful!</string>
    <string name="downloadSuccess">Translation model downloaded successfully!</string>
    <string name="downloadFailed">Model couldn’t be downloaded or other internal error!</string>
    <string name="translationFailed">Translation failed!</string>
    <string name="translateTo">Translate to:</string>
    <string name="downloading">Downloading...</string>
    <string name="translateFrom">Translate from:</string>
    <string name="requireWifi">Please connect to wifi to download the required model</string>
    <string name="requireInternet">Please connect to the internet to download the required model</string>

    // Languages
    <string-array name="supportedLanguageCodes">
        <item>af</item>
        <item>ar</item>
        <item>be</item>
        <item>bg</item>
        <item>bn</item>
        <item>ca</item>
        <item>cs</item>
        <item>cy</item>
        <item>da</item>
        <item>de</item>
        <item>el</item>
        <item>en</item>
        <item>eo</item>
        <item>es</item>
        <item>et</item>
        <item>fa</item>
        <item>fi</item>
        <item>fr</item>
        <item>ga</item>
        <item>gl</item>
        <item>gu</item>
        <item>he</item>
        <item>hi</item>
        <item>hr</item>
        <item>ht</item>
        <item>hu</item>
        <item>id</item>
        <item>is</item>
        <item>it</item>
        <item>ja</item>
        <item>ka</item>
        <item>kn</item>
        <item>ko</item>
        <item>lt</item>
        <item>lv</item>
        <item>mk</item>
        <item>mr</item>
        <item>ms</item>
        <item>mt</item>
        <item>nl</item>
        <item>no</item>
        <item>pl</item>
        <item>pt</item>
        <item>ro</item>
        <item>ru</item>
        <item>sk</item>
        <item>sl</item>
        <item>sq</item>
        <item>sv</item>
        <item>sw</item>
        <item>ta</item>
        <item>te</item>
        <item>th</item>
        <item>tl</item>
        <item>tr</item>
        <item>uk</item>
        <item>ur</item>
        <item>vi</item>
        <item>zh</item>
    </string-array>

    <string-array name="supportedLanguages">
        <item>Afrikaans</item>
        <item>Arabic</item>
        <item>Belarusian</item>
        <item>Bulgarian</item>
        <item>Bengali</item>
        <item>Catalan</item>
        <item>Czech</item>
        <item>Welsh</item>
        <item>Danish</item>
        <item>German</item>
        <item>Greek</item>
        <item>English</item>
        <item>Esperanto</item>
        <item>Spanish</item>
        <item>Estonian</item>
        <item>Persian</item>
        <item>Finnish</item>
        <item>French</item>
        <item>Irish</item>
        <item>Galician</item>
        <item>Gujarati</item>
        <item>Hebrew</item>
        <item>Hindi</item>
        <item>Croatian</item>
        <item>Haitian</item>
        <item>Hungarian</item>
        <item>Indonesian</item>
        <item>Icelandic</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Georgian</item>
        <item>Kannada</item>
        <item>Korean</item>
        <item>Lithuanian</item>
        <item>Latvian</item>
        <item>Macedonian</item>
        <item>Marathi</item>
        <item>Malay</item>
        <item>Maltese</item>
        <item>Dutch</item>
        <item>Norwegian</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Slovak</item>
        <item>Slovenian</item>
        <item>Albanian</item>
        <item>Swedish</item>
        <item>Swahili</item>
        <item>Tamil</item>
        <item>Telugu</item>
        <item>Thai</item>
        <item>Tagalog</item>
        <item>Turkish</item>
        <item>Ukrainian</item>
        <item>Urdu</item>
        <item>Vietnamese</item>
        <item>Chinese</item>
    </string-array>
</resources>