<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <ImageView
        android:id="@+id/registerImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/itranslate" />

    <EditText
        android:id="@+id/emailAddressRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:backgroundTint="@color/purple_500"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        android:textColorLink="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/registerImageView"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/registerImageView"
        app:layout_constraintVertical_bias="0.465" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:width="300dp"
        android:backgroundTint="@color/purple_500"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        android:textColorLink="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressRegister" />

    <EditText
        android:id="@+id/passwordRegister2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:width="300dp"
        android:backgroundTint="@color/purple_500"
        android:ems="10"
        android:hint="@string/retypePassword"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        android:textColorLink="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegister" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:onClick="register"
        android:text="@string/register"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegister2" />

    <EditText
        android:id="@+id/lastNameRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:width="300dp"
        android:backgroundTint="@color/purple_500"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        android:textColorLink="@color/purple_500"
        app:layout_constraintBottom_toTopOf="@+id/emailAddressRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/firstNameRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:width="300dp"
        android:backgroundTint="@color/purple_500"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        android:textColorLink="@color/purple_500"
        app:layout_constraintBottom_toTopOf="@+id/lastNameRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/registerProgressBar"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>